<resources>
    <string name="app_name">GPTEL</string>
    <string name="hint_phone">(933) 333-3333</string>
    <string name="phone_verify">مرحله بعد</string>
    <string name="hint_password">پسورد خود را تایپ کنید</string>
    <string name="hint_password_retype">پسورد خود را دوباره تایپ کنید</string>
    <string name="login">ورود</string>
    <string name="car_info">داشبورد</string>
    <string name="car_location">نقشه</string>
    <string name="services">خدمات</string>
    <string name="settings">تنظیمات</string>
    <string name="internet_dialog_title">شما به اینترنت متصل نیستید</string>
    <string name="internet_dialog_message">آیا مایلید برای دریافت و نمایش اطلاعات وضعیتی خودرو از SMS استفاده نمائید؟</string>
    <string name="dialog_ok">بله</string>
    <string name="dialog_cancel">خیر</string>
    <string name="sms_command_sending">در حال ارسال دستور به دستگاه...</string>
    <string name="sms_command_sent">دستور با موفقیت ارسال شد.</string>
    <string name="sms_command_delivered">دستور توسط دستگاه با موفقیت دریافت شد. لطفا تا دریافت پاسخ دستگاه منتظر بمانید...</string>
    <string name="sms_command_receive">پاسخ از سمت دستگاه با موفقیت دریافت شد.</string>
    <string name="oil">تعویض روغن</string>
    <string name="gearoil"> تعویض واسکازین</string>
    <string name="airfilter">تعویض فیلتر آب</string>
    <string name="oilfilter">تعویض فیلتر روغن</string>
    <string name="brakeoil">تعویض روغن ترمز</string>
    <string name="timingbelt">تعویض تسمه تایم</string>
    <string name="brakepad">تعویض لنت ترمز</string>
    <string name="tirechange">تعویض تایر</string>
    <string name="tireswap">جابجایی تایر</string>
    <string name="antifreeze">تعویض ضد یخ</string>
    <string name="service_base_time">زمان (روز)</string>
    <string name="service_base_distance">مسافت (Km)</string>
    <string name="internet_problem">به اینترنت متصل شوید</string>
    <string name="sms_verify_guide">برای ورود شماره ی همراه خود را وارد نمایید</string>
    <string name="welcome">به سامانه هوشمند رهیابی خودرو خوش آمدید.</string>
    <string name="data_send_mode">شیوه ارسال دیتا</string>
    <string name="protection_mode">حالت حفاظت</string>
    <string name="stealing_mode">حالت دزدیده شده</string>
    <string name="auto_off">خاموشی خودکار</string>
    <string name="min_voltage">کمترین حد ولتاژ</string>
    <string name="max_speed">بیشترین سرعت ماشین</string>
    <string name="min_angle">کمترین زاویه</string>
    <string name="geo_fence_lat">محدوده جغرافیایی (عرض)</string>
    <string name="geo_fence_long">محدوده جغرافیایی (طول)</string>
    <string name="geo_fence_radius">محدوده جغرافیایی (شعاع)</string>

    <!--Events-->
    <string name="offline">دستگاه خاموش</string>
    <string name="online">#دستگاه روشن</string>
    <string name="devicemoving">در حال حرکت</string>
    <string name="devicestopped">ایستاده</string>
    <string name="deviceoverspeedon">deviceOverspeedOn</string>
    <string name="deviceoverspeedoff">deviceOverspeedOff</string>
    <string name="autogeofenceon">autogeofenceOn</string>
    <string name="autogeofenceoff">autogeofenceOff</string>
    <string name="geofenceenter">geofenceEnter</string>
    <string name="geofenceexit">geofenceExit</string>
    <string name="alarmburgularon">alarmBurgularOn</string>
    <string name="alarmburgularoff">alarmBurgularOff</string>
    <string name="minvoltageon">minvoltageOn</string>
    <string name="minvoltageoff">minvoltageOff</string>
    <string name="protectionviolationoff">protectionViolationOff</string>
    <string name="protectionviolationon">protectionViolationOn</string>

    <string name="theft">theft</string>
    <!--Errors-->
    <string name="invalid_userid">شماره وارد شده معتبر نیست.</string>
    <string name="sms_send_error">خطا در ارسال کد تایید لطفا بعدا تلاش کنید.</string>
    <string name="invalid_vercode">کد تایید نامعتبر است.</string>
    <string name="vercode_expire">کد تایید منقضی شده است.</string>
    <string name="user_blocked">حساب کاربری مسدود است.</string>
    <string name="user_orphan">کاربر عضو هیچ گروهی نیست.</string>
    <string name="already_exist">کاربر در حال حاضر عضو گروه است.</string>
    <string name="device_blocked">دستگاه مسدود شده است.</string>
    <string name="access_denied">شما حق دسترسی به دستگاه را ندارید.</string>
    <string name="invalid_position">مکان مورد نظر در پایگاه داده موجود نیست.</string>
    <string name="imei_exist">این دستگاه قبلا اضافه شده است.</string>
    <string name="invalid_model">مقدار مدل معتبر نیست.</string>
    <string name="group_not_empty">گروه دستگاه دارای عضو است.</string>
    <string name="invalid_phonenumber">شماره نامعتبر است.</string>
    <string name="invalid_nationalcode">شماره ملی نامعتبر است.</string>
    <string name="invalid_receiverid">کاربری برای دریافت پیام شما وجود ندارد.</string>
    <string name="invalid_ticketid">شناسه تیکت موجود نیست.</string>
    <string name="invalid_key">کلید وارد شده صحیح نیست.</string>
    <string name="check_internet">اتصال اینترنت خود را بررسی کنید.</string>

    <!--Commands-->
    <string name="getgps">دریافت موقعیت</string>
    <string name="getminangle">دریافت حداقل زاویه</string>
    <string name="setminangle">تنظیم حداقل زاویه</string>
    <string name="getminperiod">دریافت حداقل زمان</string>
    <string name="setminperiod">تنظیم حداقل زمان</string>
    <string name="getsendperiod">دریافت زمان ارسال</string>
    <string name="setsendperiod">تنظیم زمان ارسال</string>
    <string name="getmindistance">دریافت حداقل مسافت</string>
    <string name="setmindistance">تنظیم حداقل مسافت</string>
    <string name="getminvoltage">دریافت حداقل ولتاژ</string>
    <string name="setminvoltage">تنظیم حداقل ولتاژ</string>
    <string name="getmaxspeed">دریافت حداکثر سرعت</string>
    <string name="setmaxspeed">تنظیم حداکثر سرعت</string>
    <string name="gettheftalarm">دریافت وضعیت دزدگیر</string>
    <string name="settheftalarm">تنظیم وضعیت دزدگیر</string>
    <string name="getgeofence">دریافت وضعیت محدوده مجاز</string>
    <string name="setgeofence">تنظیم وضعیت محدوده مجاز</string>
    <string name="getgeofencelatitude">دریافت عرض محدوده مجاز</string>
    <string name="setgeofencelatitude">تنظیم عرض محدوده مجاز</string>
    <string name="getgeofencelongitude">دریافت طول محدوده مجاز</string>
    <string name="setgeofencelongitude">تنظیم طول محدوده مجاز</string>
    <string name="getgeofenceradius">دریافت شعاع محدوده مجاز</string>
    <string name="setgeofenceradius">تنظیم شعاع محدوده مجاز</string>
    <string name="getautogeofence">دریافت وضعیت محدوده خودکار</string>
    <string name="setautogeofence">تنظیم وضعیت محدوده خودکار</string>
    <string name="getmaster">دریافت سرگروه</string>
    <string name="setmaster">تنظیم سرگروه</string>
    <string name="gps_network_not_enabled">مکان یاب شما خاموش است، آیا تمایل دارید روشن کنید؟</string>
    <string name="open_location_settings">بله</string>
    <string name="Cancel">خیر</string>

</resources>
