<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gptel"/>


    <LinearLayout
        android:id="@+id/verificationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:text="@string/sms_verify_guide"
            android:textColor="#FFF"
            android:textSize="23sp" />

        <LinearLayout
            android:id="@+id/edt_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingLeft="22dp"
            android:paddingTop="7dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="+98"
                android:textColor="#c9c9c9"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:maxLength="14"
                android:singleLine="true"
                android:textColor="#FFF"
                android:textColorHint="#c9c9c9"
                android:textSize="23sp" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deviceonline">

            <Button
                android:id="@+id/req_code_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_next"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/phone_verify"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>