<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#101010"
    android:orientation="vertical"
    tools:context="ir.parhoonco.traccar.ui.LaunchActivity">

    <!--android:background="@drawable/bg"-->

    <LinearLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/offline_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#aa4b4b4b"
        android:gravity="center_vertical|right"
        android:paddingRight="16dp"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="آفلاین"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/remove_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/remove" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/carTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/transition_tab_bg"
            android:onClick="onTabClicked"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/dashboard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/car_info"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/locationTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/transition_tab_bg"
            android:onClick="onTabClicked"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/car_location"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/serviceTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/transition_tab_bg"
            android:onClick="onTabClicked"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/services" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/services"
                android:textSize="19sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settingsTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/transition_tab_bg"
            android:onClick="onTabClicked"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/settings"
                android:textSize="19sp" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
